<?xml version="1.0"?>
<package format="3">
  <name>berry_picker_node</name>
  <version>0.0.1</version>
  <description>Berry Picker Robot Arm Node</description>

  <maintainer email="hyojun.choi@beyond-robotics.ai">Beyond Robotics</maintainer>
  <license>TODO: license declare</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <!-- Add other build dependencies as needed -->

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <!-- Add other exec dependencies as needed -->

  <!-- Optional: System dependencies -->
  <!-- If MMDeploy and xarm are ROS packages or have ROS interfaces, include them here -->
  <!-- If not, ensure they are properly included in CMakeLists.txt -->

  <export>
    <!-- Export information -->
    <!-- If you have plugins or other export information, include it here -->
  </export>
</package>
